--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           >
           <ul class="header-list">
             <li class="header-item">
-              <a class="header-link" href="./index.html">Studio</a>
+              <a class="header-link current" href="./index.html">Studio</a>
             </li>
             <li class="header-item">
               <a class="header-link" href="">Portfolio</a>
@@ -76,6 +76,11 @@
           <h2 class="about-title visually-hidden">About us</h2>
           <ul class="about-list">
             <li class="about-list-item">
+              <div class="about-item-container">
+                <svg class="about-item-icon" height="64" width="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="about-subtitle">Strategy</h3>
               <p class="about-text">
                 Our goal is to identify the business problem to walk away with
@@ -83,6 +88,11 @@
               </p>
             </li>
             <li class="about-list-item">
+              <div class="about-item-container">
+                <svg class="about-item-icon" height="64" width="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="about-subtitle">Punctuality</h3>
               <p class="about-text">
                 Bring the key message to the brand's audience for the best price
@@ -90,6 +100,11 @@
               </p>
             </li>
             <li class="about-list-item">
+              <div class="about-item-container">
+                <svg class="about-item-icon" height="64" width="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="about-subtitle">Diligence</h3>
               <p class="about-text">
                 Research and confirm brands that present the strongest digital
@@ -97,6 +112,11 @@
               </p>
             </li>
             <li class="about-list-item">
+              <div class="about-item-container">
+                <svg class="about-item-icon" height="64" width="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="about-subtitle">Technologies</h3>
               <p class="about-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -122,6 +142,36 @@
               <div class="members-card">
                 <h3 class="members-subtitle">Mark Guerrero</h3>
                 <p class="members-text">Product Designer</p>
+                <ul class="members-soc-list">
+                  <li class="members-soc-item">
+                    <a class="members-soc-link" href="">
+                      <svg class="members-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="members-soc-item">
+                    <a class="members-soc-link" href="">
+                      <svg class="members-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="members-soc-item">
+                    <a class="members-soc-link" href="">
+                      <svg class="members-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="members-soc-item">
+                    <a class="members-soc-link" href="">
+                      <svg class="members-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="members-list-item">
@@ -134,6 +184,36 @@
               <div class="members-card">
                 <h3 class="members-subtitle">Tom Ford</h3>
                 <p class="members-text">Frontend Developer</p>
+                <ul class="members-soc-list">
+                  <li class="members-soc-item">
+                    <a class="members-soc-link" href="">
+                      <svg class="members-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="members-soc-item">
+                    <a class="members-soc-link" href="">
+                      <svg class="members-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="members-soc-item">
+                    <a class="members-soc-link" href="">
+                      <svg class="members-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="members-soc-item">
+                    <a class="members-soc-link" href="">
+                      <svg class="members-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="members-list-item">
@@ -146,6 +226,36 @@
               <div class="members-card">
                 <h3 class="members-subtitle">Camila Garcia</h3>
                 <p class="members-text">Marketing</p>
+                <ul class="members-soc-list">
+                  <li class="members-soc-item">
+                    <a class="members-soc-link" href="">
+                      <svg class="members-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="members-soc-item">
+                    <a class="members-soc-link" href="">
+                      <svg class="members-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="members-soc-item">
+                    <a class="members-soc-link" href="">
+                      <svg class="members-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="members-soc-item">
+                    <a class="members-soc-link" href="">
+                      <svg class="members-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="members-list-item">
@@ -158,6 +268,36 @@
               <div class="members-card">
                 <h3 class="members-subtitle">Daniel Wilson</h3>
                 <p class="members-text">UI Designer</p>
+                <ul class="members-soc-list">
+                  <li class="members-soc-item">
+                    <a class="members-soc-link" href="">
+                      <svg class="members-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="members-soc-item">
+                    <a class="members-soc-link" href="">
+                      <svg class="members-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="members-soc-item">
+                    <a class="members-soc-link" href="">
+                      <svg class="members-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="members-soc-item">
+                    <a class="members-soc-link" href="">
+                      <svg class="members-soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -170,74 +310,128 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/banking-app.jpg"
-                alt="registration screen and other screenshots of the functions with the lavender and white design of the app"
-                width="360"
-              />
+              <div class="portfolio-cover-wrap">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/banking-app.jpg"
+                  alt="registration screen and other screenshots of the functions with the lavender and white design of the app"
+                  width="360"
+                />
+                <div class="portfolio-cover-container">
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/cashless-payment.jpg"
-                alt="scanning the QR code with the phone"
-                width="360"
-              />
+              <div class="portfolio-cover-wrap">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/cashless-payment.jpg"
+                  alt="scanning the QR code with the phone"
+                  width="360"
+                />
+                <div class="portfolio-cover-container">
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/meditation-app.jpg"
-                alt="red and blue
-              laptop and phone screens with the inscription «RETURN TO
-              «NORMALCY»»"
-                width="360"
-              />
+              <div class="portfolio-cover-wrap">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/meditation-app.jpg"
+                  alt="red and blue
+                laptop and phone screens with the inscription «RETURN TO
+                «NORMALCY»»"
+                  width="360"
+                />
+                <div class="portfolio-cover-container">
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/taxi-service.jpg"
-                alt="hands in gloves hold the steering wheel of the car, the switched on phone is on the holder next to it"
-                width="360"
-              />
+              <div class="portfolio-cover-wrap">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/taxi-service.jpg"
+                  alt="hands in gloves hold the steering wheel of the car, the switched on phone is on the holder next to it"
+                  width="360"
+                />
+                <div class="portfolio-cover-container">
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/screen-illustrations.jpg"
-                alt="wallpapers for the phone screen in neon purple and blue colors with the image of the moon, mountains and space"
-                width="360"
-              />
+              <div class="portfolio-cover-wrap">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/screen-illustrations.jpg"
+                  alt="wallpapers for the phone screen in neon purple and blue colors with the image of the moon, mountains and space"
+                  width="360"
+                />
+                <div class="portfolio-cover-container">
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                class="portfolio-img"
-                src="./images/portfolio/online-courses.jpg"
-                alt="a young girl in a yellow sweater and glasses watch something on the phone with headphones"
-                width="360"
-              />
+              <div class="portfolio-cover-wrap">
+                <img
+                  class="portfolio-img"
+                  src="./images/portfolio/online-courses.jpg"
+                  alt="a young girl in a yellow sweater and glasses watch something on the phone with headphones"
+                  width="360"
+                />
+                <div class="portfolio-cover-container">
+                  <p class="portfolio-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -251,13 +445,48 @@
     <footer class="footer">
       <!-- bottom logo -->
       <div class="container footer-container">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="footer-accent">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div>
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-accent">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div>
+          <h3 class="footer-title">Social media</h3>
+          <ul class="footer-soc-list">
+            <li class="footer-soc-item">
+              <a class="footer-soc-link" href="">
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link" href="">
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link" href="">
+                <svg class="members-soc-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-soc-item">
+              <a class="footer-soc-link" href="">
+                <svg class="footer-soc-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
