--- a/index.html
+++ b/index.html
@@ -317,7 +317,6 @@
                   alt="registration screen and other screenshots of the functions with the lavender and white design of the app"
                   width="360"
                 />
-
                 <p class="portfolio-cover-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -337,13 +336,12 @@
                   alt="scanning the QR code with the phone"
                   width="360"
                 />
-                <div class="portfolio-cover-container">
-                  <p class="portfolio-cover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
@@ -360,13 +358,12 @@
                 «NORMALCY»»"
                   width="360"
                 />
-                <div class="portfolio-cover-container">
-                  <p class="portfolio-cover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
@@ -400,13 +397,12 @@
                   alt="wallpapers for the phone screen in neon purple and blue colors with the image of the moon, mountains and space"
                   width="360"
                 />
-                <div class="portfolio-cover-container">
-                  <p class="portfolio-cover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
@@ -421,13 +417,12 @@
                   alt="a young girl in a yellow sweater and glasses watch something on the phone with headphones"
                   width="360"
                 />
-                <div class="portfolio-cover-container">
-                  <p class="portfolio-cover-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-card">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
@@ -442,7 +437,7 @@
     <footer class="footer">
       <!-- bottom logo -->
       <div class="container footer-container">
-        <div>
+        <div class="footer-style-container">
           <a class="footer-logo" href="./index.html"
             >Web<span class="footer-accent">Studio</span></a
           >
@@ -451,8 +446,8 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div>
-          <h3 class="footer-title">Social media</h3>
+        <div class="footer-style-container">
+          <p class="footer-title">Social media</p>
           <ul class="footer-soc-list">
             <li class="footer-soc-item">
               <a class="footer-soc-link" href="">
