--- a/index.html
+++ b/index.html
@@ -451,14 +451,14 @@
           <ul class="footer-soc-list">
             <li class="footer-soc-item">
               <a class="footer-soc-link" href="">
-                <svg class="footer-soc-icon" width="24" height="24">
+                <svg class="members-soc-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-soc-item">
               <a class="footer-soc-link" href="">
-                <svg class="footer-soc-icon" width="24" height="24">
+                <svg class="members-soc-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
@@ -472,7 +472,7 @@
             </li>
             <li class="footer-soc-item">
               <a class="footer-soc-link" href="">
-                <svg class="footer-soc-icon" width="24" height="24">
+                <svg class="members-soc-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
